--- a/app/notes/styles/github-markdown.css
+++ b/app/notes/styles/github-markdown.css
@@ -3,7 +3,7 @@
   min-width: 200px;
   max-width: 980px;
   margin-left: 0;
-  line-height: 1.5; 
+  line-height: 1.5;
 }
 
 .markdown-body h1 {
@@ -45,7 +45,7 @@
 }
 
 .markdown-body a {
-  color: #e2a727; 
+  color: #e2a727;
   text-decoration: underline;
 }
 
@@ -92,11 +92,11 @@
   width: 1.2em;
   height: 1.2em;
   border: 1px solid #6a737d;
-  border-radius: 50%; 
+  border-radius: 50%;
   vertical-align: top;
   position: relative;
   top: 0.2em;
-  cursor: pointer; 
+  cursor: pointer;
 }
 
 .markdown-body .task-list-item input[type="checkbox"]:checked {
@@ -105,7 +105,7 @@
 }
 
 .markdown-body .task-list-item input[type="checkbox"]:checked::after {
-  content: '\2713'; 
+  content: "\2713";
   font-size: 1em;
   color: white;
   position: absolute;
